vpc.tf
#creating aws vpc using terraform 

resource "aws_vpc" "some_custom_vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "some Custom VPC"
  }
}
